# video_dataset

./: .gitignore  README.md  pyproject.toml
configs/playlists/: wired_5_levels.yaml  wired_levels.yaml
schemas/: playlist_config.schema.json
src/: __init__.py  cli.py  config.py  download.py  models.py  normalization.py  pipeline.py  playlist_ingestion.py  topic_extraction.py  transcripts.py  writers.py
src/segmentation/: __init__.py  base.py  wired_5_levels.py
tests/: test_cli.py  test_config.py  test_normalization.py  test_pipeline.py  test_segmentation.py  test_transcripts.py  test_writers.py
